--- a/BookLibrary/app/build.gradle
+++ b/BookLibrary/app/build.gradle
@@ -9,7 +9,7 @@ android {
   compileSdkVersion rootProject.ext.compileSdkVersion
 
   defaultConfig {
-    applicationId "com.raywenderlich.android.BookLibrary"
+    applicationId "com.arielwang.BookLibrary"
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode 1
