--- a/BookLibrary/app/build.gradle
+++ b/BookLibrary/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
   implementation 'com.github.bumptech.glide:glide:4.11.0'
   kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+  implementation "androidx.room:room-runtime:$room_version"
+  kapt "androidx.room:room-compiler:$room_version"
+  implementation "androidx.room:room-ktx:$room_version"
+
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
+
   // Room
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
