--- a/BookLibrary/app/build.gradle
+++ b/BookLibrary/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 
+  implementation 'com.google.code.gson:gson:2.8.6'
+
   // Room
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
